--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -10,13 +10,16 @@
 #--------------------------------------------------------------
 #  Mod:
 #        30-Aug-2007, K. Luchini         (LUCHINI):
-#          release highlandVDTV550-R1-0-1
+#          release highlandLVDTV550-R1-0-2
+#          release highlandLVDTV550-R1-0-1
 #
 #==============================================================.
 #
-highlandVDTV550-R1-0-1: built with base-R3-14-8-2-lcls2 (RTEMS 4.7.1)
-                        Added standard header to this file.
+highlandLVDTV550-R1-0-2: Built with base-R3-14-9-lcls1 (RTEMS 4.7.1)
 
-highlandVDTV550-R1-0:   Initial version. No functional changes
-                        Version 1  received from Matt Bickley at JLab.
+highlandLVDTV550-R1-0-1: Built with base-R3-14-8-2-lcls2 (RTEMS 4.7.1)
+                         Added standard header to this file.
+
+highlandLVDTV550-R1-0:   Initial version. No functional changes
+                         Version 1  received from Matt Bickley at JLab.
                 
