--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -17,6 +17,9 @@
 #
 #==============================================================.
 #
+highlandLVDTV550-R2-1-0:   Built against rtems 4.9.3 and EPICS BASE:
+                           base-R3-14-8-2-lcls5
+
 highlandLVDTV550-R2-0-0: Built with base-R3-14-8-2-lcls3 (RTEMS 4.9.1)
 
 highlandLVDTV550-R1-0-2-1:
