--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,6 +9,8 @@
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
 #  Mod:
+#        20-Mar-2010, S. Hoobler         (SONYA):
+#          release highlandLVDTV550-R2-2-0
 #        29-Apr-2009, K. Luchini         (LUCHINI):
 #          release highlandLVDTV550-R2-0-0
 #        30-Aug-2007, K. Luchini         (LUCHINI):
@@ -17,6 +19,9 @@
 #
 #==============================================================.
 #
+highlandLVDTV550-R2-2-0:   Built against rtems 4.9.4 and EPICS BASE:
+                           base-R3-14-8-2-lcls6
+
 highlandLVDTV550-R2-1-0:   Built against rtems 4.9.3 and EPICS BASE:
                            base-R3-14-8-2-lcls5
 
